k8s/00-namespace-sa-rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: customer-api
