k8s/20-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-api
  namespace: customer-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-api
  template:
    metadata:
      labels:
        app: customer-api
    spec:
      serviceAccountName: customer-api-sa
      imagePullSecrets:
        - name: harbor-pull
      containers:
        - name: customer-api
          image: registry.lab-safer.com/library/customer-api-native:1.0.7
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: customer-api-svc
  namespace: customer-api
spec:
  selector:
    app: customer-api
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
