k8s/30-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: customer-api
  namespace: customer-api
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: customer.lab.int
      http:
        paths:
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: customer-api-svc
                port:
                  number: 80
          - path: /q
            pathType: Prefix
            backend:
              service:
                name: customer-api-svc
                port:
                  number: 80
